--- a/help/2021/2021-6-0.md
+++ b/help/2021/2021-6-0.md
@@ -1,5 +1,5 @@
 ---
-title: - June 2021 Release Overview
+title: June 2021 Release Overview
 description: Adobe Experience Manager as a Cloud Service Release Overview Video 2021.6.0.
 version: Cloud Service
 feature: ???
@@ -19,4 +19,5 @@ This highlights of the latest features and innovations for the June 2021 release
 >[!VIDEO](https://video.tv.adobe.com/v/334296/?quality=12&learn=on)
 
 ## Additional Release Information
+
 [Current Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
