--- a/help/2021/2021-4-0.md
+++ b/help/2021/2021-4-0.md
@@ -2,10 +2,10 @@
 title: April 2021 Release Overview
 description: Adobe Experience Manager as a Cloud Service Release Overview Video 2021.4.0.
 version: Cloud Service
-feature: ???
-topic: ???
+feature: ' '
+topic: ' '
 role: Leader, Architect, Developer, Data Architect, Data Engineer, Admin, User
-level: Beginner, Intermediate, Advanced
+level: Beginner, Intermediate, Experienced
 kt: 10218
 thumbnail: 333364.jpeg
 ---
