--- a/help/2021/2021-6-0.md
+++ b/help/2021/2021-6-0.md
@@ -2,10 +2,10 @@
 title: June 2021 Release Overview
 description: Adobe Experience Manager as a Cloud Service Release Overview Video 2021.6.0.
 version: Cloud Service
-feature: ???
-topic: ???
+feature: ' '
+topic: ' '
 role: Leader, Architect, Developer, Data Architect, Data Engineer, Admin, User
-level: Beginner, Intermediate, Advanced
+level: Beginner, Intermediate, Experienced
 kt: 10209
 thumbnail: 334296.jpeg
 ---
