--- a/help/2021/2021-9-0.md
+++ b/help/2021/2021-9-0.md
@@ -2,10 +2,10 @@
 title: September 2021 Release Overview
 description: Adobe Experience Manager as a Cloud Service Release Overview Video 2021.9.0.
 version: Cloud Service
-feature: ???
-topic: ???
+feature: ' '
+topic: ' '
 role: Leader, Architect, Developer, Data Architect, Data Engineer, Admin, User
-level: Beginner, Intermediate, Advanced
+level: Beginner, Intermediate, Experienced
 kt: 10212
 thumbnail: 337381.jpeg
 ---
