--- a/help/2022/2022-3-0.md
+++ b/help/2022/2022-3-0.md
@@ -2,10 +2,10 @@
 title: March 2022 Release Overview
 description: Adobe Experience Manager as a Cloud Service Release Overview Video 2022.3.0.
 version: Cloud Service
-feature: ???
-topic: ???
+feature: ' '
+topic: ' '
 role: Leader, Architect, Developer, Data Architect, Data Engineer, Admin, User
-level: Beginner, Intermediate, Advanced
+level: Beginner, Intermediate, Experienced
 kt: 10217
 thumbnail: 341465.jpeg
 ---
