changed page layout

--- a/help/2021/2021-4-0.md
+++ b/help/2021/2021-4-0.md
@@ -2,8 +2,6 @@
 title: April 2021 Release Overview
 description: Adobe Experience Manager as a Cloud Service Release Overview Video 2021.4.0.
 version: Cloud Service
-
-
 role: Leader, Architect, Developer, Data Architect, Data Engineer, Admin, User
 level: Beginner, Intermediate, Experienced
 kt: 10218
@@ -12,12 +10,13 @@ thumbnail: 333364.jpeg
 
 # April 2021 Release Overview
 
-Adobe Experience Manager as a Cloud Service Release Overview Video 2021.4.0.
-
 This highlights of the latest features and innovations for the April 2021 release for Assets Essentials, Sites, Screens, Forms and Cloud Foundation.
 
 >[!VIDEO](https://video.tv.adobe.com/v/333364/?quality=12&learn=on)
 
+*Adobe Experience Manager as a Cloud Service Release Overview Video 2021.4.0.*
+
 ## Additional Release Information
 
-[Current Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
+* [April Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/2021/release-notes-2021-4-0.html?lang=en)
+* [Current Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
