--- a/help/2021/2021-9-0.md
+++ b/help/2021/2021-9-0.md
@@ -2,8 +2,6 @@
 title: September 2021 Release Overview
 description: Adobe Experience Manager as a Cloud Service Release Overview Video 2021.9.0.
 version: Cloud Service
-
-
 role: Leader, Architect, Developer, Data Architect, Data Engineer, Admin, User
 level: Beginner, Intermediate, Experienced
 kt: 10212
@@ -12,12 +10,13 @@ thumbnail: 337381.jpeg
 
 # September 2021 Release Overview
 
-Adobe Experience Manager as a Cloud Service Release Overview Video 2021.9.0.
-
 This highlights of the latest features and innovations for the September 2021 release for Assets Essentials, Sites, Screens, Forms and Cloud Foundation.
 
 >[!VIDEO](https://video.tv.adobe.com/v/337381/?quality=12&learn=on)
 
+*Adobe Experience Manager as a Cloud Service Release Overview Video 2021.9.0.*
+
 ## Additional Release Information
 
-[Current Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
+*[September Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/2021/release-notes-2021-9-0.html?lang=en)
+*[Current Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
