--- a/help/2022/2022-1-0.md
+++ b/help/2022/2022-1-0.md
@@ -12,12 +12,13 @@ thumbnail: 340120.jpeg
 
 # January 2022 Release Overview
 
-Adobe Experience Manager as a Cloud Service Release Overview Video 2022.1.0.
-
 This highlights of the latest features and innovations for the January 2022 release for Assets Essentials, Sites, Screens, Forms and Cloud Foundation.
 
 >[!VIDEO](https://video.tv.adobe.com/v/340120/?quality=12&learn=on)
 
+*Adobe Experience Manager as a Cloud Service Release Overview Video 2022.1.0.*
+
 ## Additional Release Information
 
-[Current Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
+* [January Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/2022/release-notes-2022-1-0.html?lang=en)
+* [Current Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
