--- a/help/2022/2022-2-0.md
+++ b/help/2022/2022-2-0.md
@@ -12,11 +12,11 @@ thumbnail: 340450.jpeg
 
 # February 2022 Release Overview
 
-Adobe Experience Manager as a Cloud Service Release Overview Video 2022.2.0.
-
 This highlights of the latest features and innovations for the February 2022 release for Assets Essentials, Sites, Screens, Forms and Cloud Foundation.
 
 >[!VIDEO](https://video.tv.adobe.com/v/340450/?quality=12&learn=on)
+
+*Adobe Experience Manager as a Cloud Service Release Overview Video 2022.2.0.*
 
 ## Additional Release Information
 
