--- a/help/2022/2022-3-0.md
+++ b/help/2022/2022-3-0.md
@@ -12,11 +12,11 @@ thumbnail: 341465.jpeg
 
 # March 2022 Release Overview
 
-Adobe Experience Manager as a Cloud Service Release Overview Video 2022.3.0.
-
 This highlights of the latest features and innovations for the March1 2022 release for Assets Essentials, Sites, Screens, Forms and Cloud Foundation.
 
 >[!VIDEO](https://video.tv.adobe.com/v/341465/?quality=12&learn=on)
+
+*Adobe Experience Manager as a Cloud Service Release Overview Video 2022.3.0.*
 
 ## Additional Release Information
 
