--- a/help/2021/2021-12-0.md
+++ b/help/2021/2021-12-0.md
@@ -2,8 +2,6 @@
 title: December 2021 Release Overview
 description: Adobe Experience Manager as a Cloud Service Release Overview Video 2021.12.0.
 version: Cloud Service
-
-
 role: Leader, Architect, Developer, Data Architect, Data Engineer, Admin, User
 level: Beginner, Intermediate, Experienced
 kt: 10214
@@ -12,12 +10,13 @@ thumbnail: 339278.jpeg
 
 # December 2021 Release Overview
 
-Adobe Experience Manager as a Cloud Service Release Overview Video 2021.12.0.
-
 This highlights of the latest features and innovations for the December 2021 release for Assets Essentials, Sites, Screens, Forms and Cloud Foundation.
 
 >[!VIDEO](https://video.tv.adobe.com/v/339278/?quality=12&learn=on)
 
+*Adobe Experience Manager as a Cloud Service Release Overview Video 2021.12.0.*
+
 ## Additional Release Information
 
-[Current Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
+* [December Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/release-notes/2021/release-notes-2021-11-0.html?lang=en)
+* [Current Release Notes](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/release-notes/home.html)
